// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Golden V1 Shooting Rules > Basic Hit/Miss > Scenario 1: Basic hit -> non-lethal -> stunned +1 token 1`] = `
{
  "activeId": "atk",
  "log": [
    "log.action.shoots",
    "log.info.resolvingShot",
    "log.info.targetNumber",
    "log.info.rollInfo",
    "log.info.hit",
    "log.info.noSave",
    "log.info.damageRoll",
    "log.info.outcomeStunned",
    "log.info.notPushedBack",
  ],
  "mission": {
    "status": "in_progress",
    "type": "Patrol",
  },
  "participants": [
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "atk",
      "luck": 0,
      "pos": "0,0",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "character",
      "weapons": [],
    },
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "tgt",
      "luck": 0,
      "pos": "0,5",
      "status": "stunned",
      "stun": 1,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "enemy",
      "weapons": [],
    },
  ],
  "phase": "quick_actions",
  "reactionRolls": [],
  "round": 1,
}
`;

exports[`Golden V1 Shooting Rules > Basic Hit/Miss > Scenario 2: Miss -> no state change 1`] = `
{
  "activeId": "atk",
  "log": [
    "log.action.shoots",
    "log.info.resolvingShot",
    "log.info.targetNumber",
    "log.info.rollInfo",
    "log.info.miss",
  ],
  "mission": {
    "status": "in_progress",
    "type": "Patrol",
  },
  "participants": [
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "atk",
      "luck": 0,
      "pos": "0,0",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "character",
      "weapons": [],
    },
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "tgt",
      "luck": 0,
      "pos": "0,5",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "enemy",
      "weapons": [],
    },
  ],
  "phase": "quick_actions",
  "reactionRolls": [],
  "round": 1,
}
`;

exports[`Golden V1 Shooting Rules > Damage Resolution > Scenario 7: Lethal hit -> casualty (no saves) 1`] = `
{
  "activeId": "atk",
  "log": [
    "log.action.shoots",
    "log.info.resolvingShot",
    "log.info.targetNumber",
    "log.info.rollInfo",
    "log.info.hit",
    "log.info.noSave",
    "log.info.damageRoll",
    "log.info.lethalHit",
    "log.info.outcomeCasualty",
  ],
  "mission": {
    "status": "in_progress",
    "type": "Patrol",
  },
  "participants": [
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "atk",
      "luck": 0,
      "pos": "0,0",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "character",
      "weapons": [],
    },
    {
      "actions": 0,
      "armor": undefined,
      "effects": [],
      "id": "tgt",
      "luck": 0,
      "pos": "0,5",
      "status": "casualty",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "enemy",
      "weapons": [],
    },
  ],
  "phase": "quick_actions",
  "reactionRolls": [],
  "round": 1,
}
`;

exports[`Golden V1 Shooting Rules > Damage Resolution > Scenario 8: Armor save success downgrades lethal -> stunned 1`] = `
{
  "activeId": "atk",
  "log": [
    "log.action.shoots",
    "log.info.resolvingShot",
    "log.info.targetNumber",
    "log.info.rollInfo",
    "log.info.hit",
    "log.info.saveCheck",
    "log.info.saveSuccess",
    "log.info.damageRoll",
    "log.info.saveDowngradesHit",
  ],
  "mission": {
    "status": "in_progress",
    "type": "Patrol",
  },
  "participants": [
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "atk",
      "luck": 0,
      "pos": "0,0",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "character",
      "weapons": [],
    },
    {
      "actions": 2,
      "armor": "combat_armor",
      "effects": [],
      "id": "tgt",
      "luck": 0,
      "pos": "0,5",
      "status": "stunned",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "enemy",
      "weapons": [],
    },
  ],
  "phase": "quick_actions",
  "reactionRolls": [],
  "round": 1,
}
`;

exports[`Golden V1 Shooting Rules > Damage Resolution > Scenario 9: Piercing bypasses armor save 1`] = `
{
  "activeId": "atk",
  "log": [
    "log.action.shoots",
    "log.info.resolvingShot",
    "log.info.targetNumber",
    "log.info.rollInfo",
    "log.info.hit",
    "log.trait.savePierced",
    "log.info.damageRoll",
    "log.info.lethalHit",
    "log.info.outcomeCasualty",
  ],
  "mission": {
    "status": "in_progress",
    "type": "Patrol",
  },
  "participants": [
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "atk",
      "luck": 0,
      "pos": "0,0",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "character",
      "weapons": [],
    },
    {
      "actions": 0,
      "armor": "combat_armor",
      "effects": [],
      "id": "tgt",
      "luck": 0,
      "pos": "0,5",
      "status": "casualty",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "enemy",
      "weapons": [],
    },
  ],
  "phase": "quick_actions",
  "reactionRolls": [],
  "round": 1,
}
`;

exports[`Golden V1 Shooting Rules > Damage Resolution > Scenario 10: Stim-pack prevents lethal -> stunned + token 1`] = `
{
  "activeId": "atk",
  "log": [
    "log.action.shoots",
    "log.info.resolvingShot",
    "log.info.targetNumber",
    "log.info.rollInfo",
    "log.info.hit",
    "log.info.noSave",
    "log.info.damageRoll",
    "log.info.lethalHit",
    "log.info.stimPackSave",
  ],
  "mission": {
    "status": "in_progress",
    "type": "Patrol",
  },
  "participants": [
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "atk",
      "luck": 0,
      "pos": "0,0",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "character",
      "weapons": [],
    },
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "tgt",
      "luck": 0,
      "pos": "0,5",
      "status": "stunned",
      "stun": 1,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "enemy",
      "weapons": [],
    },
  ],
  "phase": "quick_actions",
  "reactionRolls": [],
  "round": 1,
}
`;

exports[`Golden V1 Shooting Rules > Damage Resolution > Scenario 11: Luck success dodge 1`] = `
{
  "activeId": "atk",
  "log": [
    "log.action.shoots",
    "log.info.resolvingShot",
    "log.info.targetNumber",
    "log.info.rollInfo",
    "log.info.hit",
    "log.info.luckCheck",
    "log.info.luckSuccess",
    "log.info.luckDodge",
  ],
  "mission": {
    "status": "in_progress",
    "type": "Patrol",
  },
  "participants": [
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "atk",
      "luck": 0,
      "pos": "0,0",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "character",
      "weapons": [],
    },
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "tgt",
      "luck": 0,
      "pos": "6,5",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "enemy",
      "weapons": [],
    },
  ],
  "phase": "quick_actions",
  "reactionRolls": [],
  "round": 1,
}
`;

exports[`Golden V1 Shooting Rules > Damage Resolution > Scenario 12: Stun escalation (3 tokens -> casualty) 1`] = `
{
  "activeId": "atk",
  "log": [
    "log.info.damageRoll",
    "log.info.outcomeStunned",
    "log.info.notPushedBack",
    "log.info.resolvingShot",
    "log.info.targetNumber",
    "log.info.rollInfo",
    "log.info.hit",
    "log.info.noSave",
    "log.info.damageRoll",
    "log.info.stunCollapse",
  ],
  "mission": {
    "status": "in_progress",
    "type": "Patrol",
  },
  "participants": [
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "atk",
      "luck": 0,
      "pos": "0,0",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "character",
      "weapons": [],
    },
    {
      "actions": 0,
      "armor": undefined,
      "effects": [],
      "id": "tgt",
      "luck": 0,
      "pos": "0,5",
      "status": "casualty",
      "stun": 3,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "enemy",
      "weapons": [],
    },
  ],
  "phase": "quick_actions",
  "reactionRolls": [],
  "round": 1,
}
`;

exports[`Golden V1 Shooting Rules > Damage Resolution > Scenario 13: Impact adds +1 stun 1`] = `
{
  "activeId": "atk",
  "log": [
    "log.action.shoots",
    "log.info.resolvingShot",
    "log.info.targetNumber",
    "log.info.rollInfo",
    "log.info.hit",
    "log.info.noSave",
    "log.info.damageRoll",
    "log.trait.impactStun",
    "log.info.outcomeStunned",
    "log.info.notPushedBack",
  ],
  "mission": {
    "status": "in_progress",
    "type": "Patrol",
  },
  "participants": [
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "atk",
      "luck": 0,
      "pos": "0,0",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "character",
      "weapons": [],
    },
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "tgt",
      "luck": 0,
      "pos": "0,5",
      "status": "stunned",
      "stun": 2,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "enemy",
      "weapons": [],
    },
  ],
  "phase": "quick_actions",
  "reactionRolls": [],
  "round": 1,
}
`;

exports[`Golden V1 Shooting Rules > Damage Resolution > Scenario 14: Critical trait baseline 1`] = `
{
  "activeId": "atk",
  "log": [
    "log.info.rollInfo",
    "log.info.hit",
    "log.info.noSave",
    "log.info.damageRoll",
    "log.info.outcomeStunned",
    "log.info.notPushedBack",
    "log.info.noSave",
    "log.info.damageRoll",
    "log.info.outcomeStunned",
    "log.info.notPushedBack",
  ],
  "mission": {
    "status": "in_progress",
    "type": "Patrol",
  },
  "participants": [
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "atk",
      "luck": 0,
      "pos": "0,0",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "character",
      "weapons": [],
    },
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "tgt",
      "luck": 0,
      "pos": "0,5",
      "status": "stunned",
      "stun": 2,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "enemy",
      "weapons": [],
    },
  ],
  "phase": "quick_actions",
  "reactionRolls": [],
  "round": 1,
}
`;

exports[`Golden V1 Shooting Rules > Modifiers > Scenario 3: Aimed reroll (1 -> reroll -> hit) + lethal casualty 1`] = `
{
  "activeId": "atk",
  "log": [
    "log.action.shootsAimed",
    "log.info.resolvingShot",
    "log.info.targetNumber",
    "log.info.rollInfo",
    "log.info.hit",
    "log.info.noSave",
    "log.info.damageRoll",
    "log.info.lethalHit",
    "log.info.outcomeCasualty",
  ],
  "mission": {
    "status": "in_progress",
    "type": "Patrol",
  },
  "participants": [
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "atk",
      "luck": 0,
      "pos": "0,0",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "character",
      "weapons": [],
    },
    {
      "actions": 0,
      "armor": undefined,
      "effects": [],
      "id": "tgt",
      "luck": 0,
      "pos": "0,5",
      "status": "casualty",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "enemy",
      "weapons": [],
    },
  ],
  "phase": "quick_actions",
  "reactionRolls": [],
  "round": 1,
}
`;

exports[`Golden V1 Shooting Rules > Modifiers > Scenario 4: Cover present 1`] = `
{
  "activeId": "atk",
  "log": [
    "log.action.shoots",
    "log.info.resolvingShot",
    "log.info.targetNumber",
    "log.info.rollInfo",
    "log.info.miss",
  ],
  "mission": {
    "status": "in_progress",
    "type": "Patrol",
  },
  "participants": [
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "atk",
      "luck": 0,
      "pos": "0,0",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "character",
      "weapons": [],
    },
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "tgt",
      "luck": 0,
      "pos": "0,10",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "enemy",
      "weapons": [],
    },
  ],
  "phase": "quick_actions",
  "reactionRolls": [],
  "round": 1,
}
`;

exports[`Golden V1 Shooting Rules > Modifiers > Scenario 5: Heavy penalty after move 1`] = `
{
  "activeId": "atk",
  "log": [
    "log.action.shoots",
    "log.info.resolvingShot",
    "log.trait.heavyPenalty",
    "log.info.targetNumber",
    "log.info.rollInfo",
    "log.info.hit",
    "log.info.noSave",
    "log.info.damageRoll",
    "log.info.outcomeStunned",
    "log.info.notPushedBack",
  ],
  "mission": {
    "status": "in_progress",
    "type": "Patrol",
  },
  "participants": [
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "atk",
      "luck": 0,
      "pos": "0,0",
      "status": "active",
      "stun": 0,
      "taken": "m:1,c:0,d:0,i:0",
      "type": "character",
      "weapons": [],
    },
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "tgt",
      "luck": 0,
      "pos": "0,5",
      "status": "stunned",
      "stun": 1,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "enemy",
      "weapons": [],
    },
  ],
  "phase": "quick_actions",
  "reactionRolls": [],
  "round": 1,
}
`;

exports[`Golden V1 Shooting Rules > Modifiers > Scenario 6a: Snap Shot OFF (distance 7) -> Miss 1`] = `
{
  "activeId": "atk",
  "log": [
    "log.action.shoots",
    "log.info.resolvingShot",
    "log.info.targetNumber",
    "log.info.rollInfo",
    "log.info.miss",
  ],
  "mission": {
    "status": "in_progress",
    "type": "Patrol",
  },
  "participants": [
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "atk",
      "luck": 0,
      "pos": "0,0",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "character",
      "weapons": [],
    },
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "tgt",
      "luck": 0,
      "pos": "0,7",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "enemy",
      "weapons": [],
    },
  ],
  "phase": "quick_actions",
  "reactionRolls": [],
  "round": 1,
}
`;

exports[`Golden V1 Shooting Rules > Modifiers > Scenario 6b: Snap Shot ON (distance 6) -> Hit 1`] = `
{
  "activeId": "atk",
  "log": [
    "log.action.shoots",
    "log.info.resolvingShot",
    "log.trait.snapShotBonus",
    "log.info.targetNumber",
    "log.info.rollInfo",
    "log.info.hit",
    "log.info.noSave",
    "log.info.damageRoll",
    "log.info.outcomeStunned",
    "log.info.notPushedBack",
  ],
  "mission": {
    "status": "in_progress",
    "type": "Patrol",
  },
  "participants": [
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "atk",
      "luck": 0,
      "pos": "0,0",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "character",
      "weapons": [],
    },
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "tgt",
      "luck": 0,
      "pos": "0,6",
      "status": "stunned",
      "stun": 1,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "enemy",
      "weapons": [],
    },
  ],
  "phase": "quick_actions",
  "reactionRolls": [],
  "round": 1,
}
`;
